--- a/project/src/main/res/values-de/strings.xml
+++ b/project/src/main/res/values-de/strings.xml
@@ -339,6 +339,8 @@
     <string name="x_flight_to_x_TEMPLATE">%1$s-Flug nach %2$s</string>
     <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
     <string name="your_flight_to_x_TEMPLATE">Ihr Flug nach %1$s</string>
+    <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
+    <string name="your_selected_flight_to_x_TEMPLATE">Sie haben einen Flug nach %1$s ausgewählt</string>
     <!-- Notification title for car pick up -->
     <string name="Car_Pick_Up_X_TEMPLATE">Mietwagenabholung – %s</string>
     <!-- Notification text for car pick up -->
@@ -351,6 +353,8 @@
     <string name="Activity_starting_soon">Aktivität geht bald los</string>
     <!-- Notification text for activity start -->
     <string name="Your_X_ticket_can_be_redeemed_TEMPLATE">Folgendes kann ab morgen eingelöst werden: %s</string>
+    <!-- Notification text for a desktop booking itinerary being available on the user's device -->
+    <string name="Itinerary_ready">Reiseplan ist verfügbar</string>
 
     <!-- Itineraries -->
     <!-- Itinerary -->
@@ -359,12 +363,16 @@
     <string name="shop">Buchen</string>
     <!-- Find Itinerary -->
     <string name="find_itinerary">Reiseplan suchen</string>
+    <!-- Enter Itinerary Details -->
+    <string name="enter_itinerary_details">Reiseplandetails eingeben</string>
     <!-- Find Itinerary # -->
     <string name="find_itinerary_pound">Reiseplannr. suchen:</string>
     <!-- Expedia Itinerary -->
     <string name="expedia_itinerary">Expedia-Reiseplannr.</string>
-    <!-- Elite plus customer support -->
-    <string name="elite_plus_customer_support">Elite-Plus-Kundenservice</string>
+    <!-- Label for exclusive +silver phone number, "Expedia +silver Customer Support" -->
+    <string name="Expedia_plus_Silver_Customer_Support">Kundenservice für Expedia +silver</string>
+    <!-- Label for exclusive +gold phone number, "Expedia +gold Customer Support" -->
+    <string name="Expedia_plus_Gold_Customer_Support">Kundenservice für Expedia +gold</string>
     <!-- No upcoming trips -->
     <string name="no_upcoming_trips">Es stehen keine Reisen bevor.</string>
     <!-- Enter itinerary number -->
@@ -1148,6 +1156,12 @@
     <string name="airline_card_not_supported_TEMPLATE">%1$s wird von der Fluglinie nicht unterstützt.</string>
     <!-- Message shown to user when they can't use their credit card to book with the airline, but when we don't know the type of the card -->
     <string name="airline_card_not_supported_generic">Diese Kreditkartenmarke wird von der Fluglinie nicht unterstützt.</string>
+    <!-- Message shown to user explaining a hotel fee is being charged to use their credit card brand, %1$s is the fee amount and %2$s is the credit card brand e.g. "The hotel charges a fee of $8.50 to use VISA." -->
+    <string name="hotel_card_fee_select_TEMPLATE">Das Hotel berechnet eine Gebühr von %1$s für die Verwendung von %2$s.</string>
+    <!-- Message shown to user when they can't use their credit card to book with the airline, %1$s is the credit card brand. e.g. "The hotel does not support VISA." -->
+    <string name="hotel_card_not_supported_TEMPLATE">%1$s wird vom Hotel nicht unterstützt.</string>
+    <!-- Message shown to user when they can't use their credit card to book with the hotel, but when we don't know the type of the card -->
+    <string name="hotel_card_not_supported_generic">Diese Kreditkartenmarke wird vom Hotel nicht unterstützt.</string>
 
     <!-- Checkout Activity -->
     <!-- Checkout Information label -->
@@ -2064,8 +2078,12 @@
     <string name="logout_confirmation">Möchten Sie sich wirklich von Ihrem Expedia-Konto abmelden?</string>
     <!-- Label for account status -->
     <string name="enrolled_in_expedia_rewards">Registriert für Expedia+ Rewards\u2122</string>
-    <!-- Label for account status -->
-    <string name="enrolled_in_expedia_elite_plus_rewards">Elite-Plus-Mitglied</string>
+    <!-- Label for Expedia +blue rewards program name -->
+    <string name="Expedia_plus_blue">Expedia +blue</string>
+    <!-- Label for Expedia +silver rewards program name -->
+    <string name="Expedia_plus_silver">Expedia +silver</string>
+    <!-- Label for Expedia +gold rewards program name -->
+    <string name="Expedia_plus_gold">Expedia +gold</string>
     <!-- Label for account name -->
     <string name="logged_in_as">Angemeldet als</string>
     <!-- Label for signin screen -->
@@ -2121,11 +2139,17 @@
     <!-- Error when applying coupon - the hotel does not accept coupons -->
     <string name="coupon_error_hotel_excluded">Leider akzeptiert dieses Hotel keine Gutscheine.</string>
     <!-- Error when applying coupon - the hotel does not accept coupons -->
-    <string name="coupon_error_invalid_hotel">Leider akzeptiert dieses Hotel keine Gutscheine.</string>
+    <string name="coupon_error_invalid_hotel">Ihr Gutschein kann bei diesem Hotel leider nicht eingelöst werden.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Leider können wir im Moment keine Gutscheine verarbeiten.  Bitte versuchen Sie es erneut.</string>
     <!-- Error when applying coupon - session timeout -->
     <string name="coupon_error_service_timeout">Leider hat das Einlösen des Gutscheins zu lange gedauert. Bitte versuchen Sie es erneut.</string>
+    <!-- Error when applying coupon - Invalid Stay Dates -->
+    <string name="coupon_error_invalid_stay_dates">Leider kann der Gutschein nicht für diesen Reisezeitraum eingelöst werden.</string>
+    <!-- Error when applying coupon - Exceeded Earn Limit -->
+    <string name="coupon_error_exceeded_earn_limit">Leider wurde dieser Gutschein schon zu oft eingelöst und kann daher nicht mehr genutzt werden.</string>
+    <!-- Error when applying coupon - Invalid Average Price -->
+    <string name="coupon_error_invalid_average_price">Leider entspricht der Durchschnittspreis pro Nacht nicht den Mindestanforderungen dieses Gutscheins.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2716,6 +2740,10 @@
     <string name="S_Push_flight_CITY_gate_GATE">Ihr Flug nach %1$s startet nun von Gate %2$s.</string>
     <!-- Your bags will be at baggage claim _  TEMPLATE -->
     <string name="S_Push_baggage_BAGGAGE">Sie können Ihr Gepäck am Gepäckband %1$s abholen.</string>
+    <!-- <First Name>, your booking is confirmed! View it in the app. TEMPLATE -->
+    <string name="S_Push_Hey_VALUE_your_booking_is_confirmed">%1$s, Ihre Buchung ist bestätigt! Sie finden sie in der App.</string>
+    <!--Your booking is confirmed! View it in the app. (For when we can't or don't want to address by first name -->
+    <string name="S_Push_Your_booking_is_confirmed_View_it_in_app">Ihre Buchung ist bestätigt! Sie finden sie in der App.</string>
 
     <!-- VSC Info Screen -->
     <!-- Header for a list of apps also written by VSC -->
@@ -2985,5 +3013,8 @@
     <string name="tablet_mismatched_products_message">Ihre Flug- und Hoteldaten stimmen nicht überein. Möchten Sie das ausgewählte Hotel entfernen und stattdessen nach Hotels suchen, die zu Ihren Flugdaten passen?</string>
     <!-- Dialog positive button message -->
     <string name="yes">Ja</string>
+
+    <!-- Travelocity App download link -->
+    <string name="share_template_long_ad_tvly">Sie möchten Hotels und Flüge buchen und Ihre Reisepläne einsehen und teilen? Dann laden Sie noch heute die kostenlose Travelocity-App herunter.\n%s</string>
 
 </resources>
