--- a/project/src/main/res/values-fr-rCA/strings.xml
+++ b/project/src/main/res/values-fr-rCA/strings.xml
@@ -3,7 +3,7 @@
 
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
-    <string name="search_all_hint">Veuillez saisir votre destination</string>
+    <string name="search_all_hint">Veuillez entrer votre destination</string>
     <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
     <string name="fly_from_TEMPLATE">Prendre un vol à %1$s</string>
     <!-- Fly from… -->
@@ -339,6 +339,8 @@
     <string name="x_flight_to_x_TEMPLATE">%1$s vol vers %2$s</string>
     <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
     <string name="your_flight_to_x_TEMPLATE">Votre vol vers %1$s</string>
+    <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
+    <string name="your_selected_flight_to_x_TEMPLATE">Votre vol sélectionné vers %1$s</string>
     <!-- Notification title for car pick up -->
     <string name="Car_Pick_Up_X_TEMPLATE">Prise en charge de voiture – %s</string>
     <!-- Notification text for car pick up -->
@@ -351,6 +353,8 @@
     <string name="Activity_starting_soon">Activité commençant bientôt</string>
     <!-- Notification text for activity start -->
     <string name="Your_X_ticket_can_be_redeemed_TEMPLATE">Votre billet pour %s peut être réclamé à compter de demain.</string>
+    <!-- Notification text for a desktop booking itinerary being available on the user's device -->
+    <string name="Itinerary_ready">Itinéraire prêt</string>
 
     <!-- Itineraries -->
     <!-- Itinerary -->
@@ -359,12 +363,16 @@
     <string name="shop">Accueil</string>
     <!-- Find Itinerary -->
     <string name="find_itinerary">Chercher un itinéraire</string>
+    <!-- Enter Itinerary Details -->
+    <string name="enter_itinerary_details">Entrer les détails de l\&apos;itinéraire</string>
     <!-- Find Itinerary # -->
     <string name="find_itinerary_pound">Chercher l\&apos;itinéraire nº</string>
     <!-- Expedia Itinerary -->
     <string name="expedia_itinerary">Nº d\&apos;itinéraire Expedia</string>
-    <!-- Elite plus customer support -->
-    <string name="elite_plus_customer_support">Soutien à la clientèle Elite Plus</string>
+    <!-- Label for exclusive +silver phone number, "Expedia +silver Customer Support" -->
+    <string name="Expedia_plus_Silver_Customer_Support">Soutien à la clientèle Expedia +argent</string>
+    <!-- Label for exclusive +gold phone number, "Expedia +gold Customer Support" -->
+    <string name="Expedia_plus_Gold_Customer_Support">Soutien à la clientèle Expedia +or</string>
     <!-- No upcoming trips -->
     <string name="no_upcoming_trips">Aucun voyage prochain.</string>
     <!-- Enter itinerary number -->
@@ -1147,7 +1155,13 @@
     <!-- Message shown to user when they can't use their credit card to book with the airline, %1$s is the credit card brand. e.g. "The airline does not support VISA." -->
     <string name="airline_card_not_supported_TEMPLATE">La compagnie aérienne n\&apos;accepte pas %1$s.</string>
     <!-- Message shown to user when they can't use their credit card to book with the airline, but when we don't know the type of the card -->
-    <string name="airline_card_not_supported_generic">La compagnie n\&apos;accepte pas cette marque de carte de paiement.</string>
+    <string name="airline_card_not_supported_generic">La compagnie n\&apos;accepte pas cette marque de carte de crédit.</string>
+    <!-- Message shown to user explaining a hotel fee is being charged to use their credit card brand, %1$s is the fee amount and %2$s is the credit card brand e.g. "The hotel charges a fee of $8.50 to use VISA." -->
+    <string name="hotel_card_fee_select_TEMPLATE">L\&apos;hôtel applique des frais de %1$s pour utiliser %2$s.</string>
+    <!-- Message shown to user when they can't use their credit card to book with the airline, %1$s is the credit card brand. e.g. "The hotel does not support VISA." -->
+    <string name="hotel_card_not_supported_TEMPLATE">L\&apos;hôtel n\&apos;accepte pas %1$s.</string>
+    <!-- Message shown to user when they can't use their credit card to book with the hotel, but when we don't know the type of the card -->
+    <string name="hotel_card_not_supported_generic">L\&apos;hôtel n\&apos;accepte pas cette marque de carte de crédit.</string>
 
     <!-- Checkout Activity -->
     <!-- Checkout Information label -->
@@ -1802,7 +1816,7 @@
     <!-- Title for VIP Access message -->
     <string name="vip_access">+Accès VIP</string>
     <!-- Message that explains the meaning of VIP Access -->
-    <string name="vip_access_message">Les hôtels +Accès VIP offrent le surclassement sans frais en catégorie supérieure aux membres +silver et +gold ainsi que de nombreux autres avantages, selon disponibilité à l\&apos;arrivée.</string>
+    <string name="vip_access_message">Les hôtels +Accès VIP offrent le surclassement sans frais en catégorie supérieure aux membres +argent et +or ainsi que de nombreux autres avantages, selon disponibilité à l\&apos;arrivée.</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="filter_vip_access">Seulement les hôtels +Accès VIP</string>
     <!-- Filter for showing only VIP access hotels -->
@@ -2063,8 +2077,12 @@
     <string name="logout_confirmation">Voulez-vous vraiment vous déconnecter de votre compte Expedia?</string>
     <!-- Label for account status -->
     <string name="enrolled_in_expedia_rewards">Inscrits à Expedia+\u2122</string>
-    <!-- Label for account status -->
-    <string name="enrolled_in_expedia_elite_plus_rewards">Membre Elite Plus</string>
+    <!-- Label for Expedia +blue rewards program name -->
+    <string name="Expedia_plus_blue">Expedia +bleu</string>
+    <!-- Label for Expedia +silver rewards program name -->
+    <string name="Expedia_plus_silver">Expedia +argent</string>
+    <!-- Label for Expedia +gold rewards program name -->
+    <string name="Expedia_plus_gold">Expedia +or</string>
     <!-- Label for account name -->
     <string name="logged_in_as">En session en tant que</string>
     <!-- Label for signin screen -->
@@ -2120,11 +2138,17 @@
     <!-- Error when applying coupon - the hotel does not accept coupons -->
     <string name="coupon_error_hotel_excluded">Désolé, cet hôtel n\&apos;accepte pas les bons de réduction..</string>
     <!-- Error when applying coupon - the hotel does not accept coupons -->
-    <string name="coupon_error_invalid_hotel">Désolé, cet hôtel n\&apos;accepte pas les bons de réduction.</string>
+    <string name="coupon_error_invalid_hotel">Désolé! Votre bon de réduction ne peut être appliqué sur cet hôtel.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
-    <string name="coupon_error_service_down">Désolé, nous ne pouvons pas traiter les bons de réduction en ce moment Veuillez réessayer.</string>
+    <string name="coupon_error_service_down">Désolé, nous ne pouvons pas traiter les bons de réduction en ce moment.  Veuillez réessayer.</string>
     <!-- Error when applying coupon - session timeout -->
     <string name="coupon_error_service_timeout">Désolé! Le temps accordé pour appliquer le code a été dépassé. Veuillez réessayer.</string>
+    <!-- Error when applying coupon - Invalid Stay Dates -->
+    <string name="coupon_error_invalid_stay_dates">Désolé! Ce bon de réduction ne peut être appliqué aux dates de voyage indiquées.</string>
+    <!-- Error when applying coupon - Exceeded Earn Limit -->
+    <string name="coupon_error_exceeded_earn_limit">Désolé! Ce bon de réduction a été utilisé à plusieurs reprises et n\&apos;est donc plus valide.</string>
+    <!-- Error when applying coupon - Invalid Average Price -->
+    <string name="coupon_error_invalid_average_price">Désolé! Le prix moyen par nuitée ne correspond pas à la valeur minimale de ce bon de réduction.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2715,6 +2739,10 @@
     <string name="S_Push_flight_CITY_gate_GATE">Votre vol vers %1$s décolle maintenant de la porte %2$s.</string>
     <!-- Your bags will be at baggage claim _  TEMPLATE -->
     <string name="S_Push_baggage_BAGGAGE">Vos sacs seront à la récupération des bagages %1$s.</string>
+    <!-- <First Name>, your booking is confirmed! View it in the app. TEMPLATE -->
+    <string name="S_Push_Hey_VALUE_your_booking_is_confirmed">%1$s, votre réservation est confirmée. L\&apos;afficher dans l\&apos;appli.</string>
+    <!--Your booking is confirmed! View it in the app. (For when we can't or don't want to address by first name -->
+    <string name="S_Push_Your_booking_is_confirmed_View_it_in_app">Votre réservation est confirmée! L\&apos;afficher dans l\&apos;appli.</string>
 
     <!-- VSC Info Screen -->
     <!-- Header for a list of apps also written by VSC -->
@@ -2984,5 +3012,8 @@
     <string name="tablet_mismatched_products_message">Les dates sélectionnées pour l\&apos;hôtel et le vol diffèrent. Voulez-vous annuler votre sélection d\&apos;hôtel actuelle et rechercher des hôtels pour les dates correspondant à vos vols?</string>
     <!-- Dialog positive button message -->
     <string name="yes">Oui</string>
+
+    <!-- Travelocity App download link -->
+    <string name="share_template_long_ad_tvly">Réservez hôtels, vols, consultez et partagez vos itinéraires. Téléchargez l\&apos;appli mobile gratuite Travelocity aujourd\&apos;hui.\n%s</string>
 
 </resources>
