--- a/project/src/main/res/values-in/strings.xml
+++ b/project/src/main/res/values-in/strings.xml
@@ -339,6 +339,8 @@
     <string name="x_flight_to_x_TEMPLATE">Penerbangan %1$s ke %2$s</string>
     <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
     <string name="your_flight_to_x_TEMPLATE">Penerbangan Anda ke %1$s</string>
+    <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
+    <string name="your_selected_flight_to_x_TEMPLATE">Penerbangan pilihan Anda ke %1$s</string>
     <!-- Notification title for car pick up -->
     <string name="Car_Pick_Up_X_TEMPLATE">Pengambilan Mobil – %s</string>
     <!-- Notification text for car pick up -->
@@ -351,6 +353,8 @@
     <string name="Activity_starting_soon">Aktivitas segera dimulai</string>
     <!-- Notification text for activity start -->
     <string name="Your_X_ticket_can_be_redeemed_TEMPLATE">Tiket %s Anda bisa ditukarkan mulai besok.</string>
+    <!-- Notification text for a desktop booking itinerary being available on the user's device -->
+    <string name="Itinerary_ready">Itinerary Anda sudah siap!</string>
 
     <!-- Itineraries -->
     <!-- Itinerary -->
@@ -359,12 +363,16 @@
     <string name="shop">Beli</string>
     <!-- Find Itinerary -->
     <string name="find_itinerary">Cari Itinerary</string>
+    <!-- Enter Itinerary Details -->
+    <string name="enter_itinerary_details">Masukkan Rincian Itinerary</string>
     <!-- Find Itinerary # -->
     <string name="find_itinerary_pound">Cari Nomor Itineryary</string>
     <!-- Expedia Itinerary -->
     <string name="expedia_itinerary">Nomor Itinerary Expedia</string>
-    <!-- Elite plus customer support -->
-    <string name="elite_plus_customer_support">Layanan Pelanggan Elite Plus</string>
+    <!-- Label for exclusive +silver phone number, "Expedia +silver Customer Support" -->
+    <string name="Expedia_plus_Silver_Customer_Support">Layanan Pelanggan khusus Expedia +silver</string>
+    <!-- Label for exclusive +gold phone number, "Expedia +gold Customer Support" -->
+    <string name="Expedia_plus_Gold_Customer_Support">Layanan Pelanggan khusus Expedia +gold</string>
     <!-- No upcoming trips -->
     <string name="no_upcoming_trips">Tidak ada perjalanan akan datang.</string>
     <!-- Enter itinerary number -->
@@ -1148,6 +1156,12 @@
     <string name="airline_card_not_supported_TEMPLATE">Maskapai ini tidak menerima %1$s.</string>
     <!-- Message shown to user when they can't use their credit card to book with the airline, but when we don't know the type of the card -->
     <string name="airline_card_not_supported_generic">Maskapai ini tidak dapat melayani kartu kredit merek ini.</string>
+    <!-- Message shown to user explaining a hotel fee is being charged to use their credit card brand, %1$s is the fee amount and %2$s is the credit card brand e.g. "The hotel charges a fee of $8.50 to use VISA." -->
+    <string name="hotel_card_fee_select_TEMPLATE">Hotel menarik biaya sebesar %1$s untuk penggunaan %2$s.</string>
+    <!-- Message shown to user when they can't use their credit card to book with the airline, %1$s is the credit card brand. e.g. "The hotel does not support VISA." -->
+    <string name="hotel_card_not_supported_TEMPLATE">Hotel ini tidak bisa melayani %1$s</string>
+    <!-- Message shown to user when they can't use their credit card to book with the hotel, but when we don't know the type of the card -->
+    <string name="hotel_card_not_supported_generic">Hotel ini tidak bisa melayani merek kartu kredit ini.</string>
 
     <!-- Checkout Activity -->
     <!-- Checkout Information label -->
@@ -2063,8 +2077,12 @@
     <string name="logout_confirmation">Yakin ingin keluar dari akun Expedia?</string>
     <!-- Label for account status -->
     <string name="enrolled_in_expedia_rewards">Daftar ke Expedia+ Rewards\u2122</string>
-    <!-- Label for account status -->
-    <string name="enrolled_in_expedia_elite_plus_rewards">Anggota Elite Plus</string>
+    <!-- Label for Expedia +blue rewards program name -->
+    <string name="Expedia_plus_blue">Expedia +blue</string>
+    <!-- Label for Expedia +silver rewards program name -->
+    <string name="Expedia_plus_silver">Expedia +silver</string>
+    <!-- Label for Expedia +gold rewards program name -->
+    <string name="Expedia_plus_gold">Expedia +gold</string>
     <!-- Label for account name -->
     <string name="logged_in_as">Masuk sebagai</string>
     <!-- Label for signin screen -->
@@ -2120,11 +2138,17 @@
     <!-- Error when applying coupon - the hotel does not accept coupons -->
     <string name="coupon_error_hotel_excluded">Maaf, hotel ini tidak menerima kupon.</string>
     <!-- Error when applying coupon - the hotel does not accept coupons -->
-    <string name="coupon_error_invalid_hotel">Maaf, hotel ini tidak menerima kupon.</string>
+    <string name="coupon_error_invalid_hotel">Maaf, kupon tidak bisa digunakan untuk hotel ini.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Maaf, tapi untuk saat ini kami tidak bisa memproses kupon Harap coba lagi.</string>
     <!-- Error when applying coupon - session timeout -->
     <string name="coupon_error_service_timeout">Maaf, namun penerapan kode memerlukan waktu terlalu lama. Coba lagi.</string>
+    <!-- Error when applying coupon - Invalid Stay Dates -->
+    <string name="coupon_error_invalid_stay_dates">Maaf, kupon tidak bisa digunakan untuk tanggal perjalanan ini.</string>
+    <!-- Error when applying coupon - Exceeded Earn Limit -->
+    <string name="coupon_error_exceeded_earn_limit">Maaf, kupon ini telah digunakan terlalu sering, karena itu tidak lagi berlaku.</string>
+    <!-- Error when applying coupon - Invalid Average Price -->
+    <string name="coupon_error_invalid_average_price">Maaf, harga rata-rata per malam minimum yang diharuskan tidak memenuhi syarat untuk penggunaan kupon ini.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2715,6 +2739,10 @@
     <string name="S_Push_flight_CITY_gate_GATE">Penerbangan Anda ke %1$s sekarang berangkat dari gate %2$s.</string>
     <!-- Your bags will be at baggage claim _  TEMPLATE -->
     <string name="S_Push_baggage_BAGGAGE">Koper Anda ada di klaim bagasi %1$s.</string>
+    <!-- <First Name>, your booking is confirmed! View it in the app. TEMPLATE -->
+    <string name="S_Push_Hey_VALUE_your_booking_is_confirmed">%1$s, pemesanan Anda telah dikonfirmasi! Lihat di aplikasi.</string>
+    <!--Your booking is confirmed! View it in the app. (For when we can't or don't want to address by first name -->
+    <string name="S_Push_Your_booking_is_confirmed_View_it_in_app">Pemesanan Anda telah dikonfirmasi! Lihat di aplikasi.</string>
 
     <!-- VSC Info Screen -->
     <!-- Header for a list of apps also written by VSC -->
@@ -2984,5 +3012,8 @@
     <string name="tablet_mismatched_products_message">Tanggal yang Anda pilih untuk hotel dan penerbangan Anda tidak sama. Apakah Anda ingin menghapus pilihan hotel Anda saat ini dan mencari hotel lain yang tanggalnya sama dengan penerbangan Anda?</string>
     <!-- Dialog positive button message -->
     <string name="yes">Ya</string>
+
+    <!-- Travelocity App download link -->
+    <string name="share_template_long_ad_tvly">Pesan hotel, penerbangan, lalu lihat dan bagikan itinerary Anda. Download aplikasi mobile Travelocity gratis sekarang juga.\n%s</string>
 
 </resources>
