--- a/project/src/main/res/values-th/strings.xml
+++ b/project/src/main/res/values-th/strings.xml
@@ -341,6 +341,8 @@
     <string name="x_flight_to_x_TEMPLATE">เที่ยวบิน %1$s ไปยัง %2$s</string>
     <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
     <string name="your_flight_to_x_TEMPLATE">เที่ยวบินไปยัง %1$s</string>
+    <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
+    <string name="your_selected_flight_to_x_TEMPLATE">เที่ยวบินที่คุณเลือกไปยัง %1$s</string>
     <!-- Notification title for car pick up -->
     <string name="Car_Pick_Up_X_TEMPLATE">รับรถ - %s</string>
     <!-- Notification text for car pick up -->
@@ -353,6 +355,8 @@
     <string name="Activity_starting_soon">กิจกรรมจะเริ่มเร็วๆ นี้</string>
     <!-- Notification text for activity start -->
     <string name="Your_X_ticket_can_be_redeemed_TEMPLATE">คุณสามารถแลกตั๋ว %s ได้ตั้งแต่พรุ่งนี้เป็นต้นไป</string>
+    <!-- Notification text for a desktop booking itinerary being available on the user's device -->
+    <string name="Itinerary_ready">แผนการเดินทางพร้อม</string>
 
     <!-- Itineraries -->
     <!-- Itinerary -->
@@ -361,12 +365,16 @@
     <string name="shop">จอง</string>
     <!-- Find Itinerary -->
     <string name="find_itinerary">ค้นหาแผนการเดินทาง</string>
+    <!-- Enter Itinerary Details -->
+    <string name="enter_itinerary_details">ป้อนรายละเอียดแผนการเดินทาง</string>
     <!-- Find Itinerary # -->
     <string name="find_itinerary_pound">ค้นหาหมายเลขแผนการเดินทาง</string>
     <!-- Expedia Itinerary -->
     <string name="expedia_itinerary">หมายเลขแผนการเดินทางเอ็กซ์พีเดีย</string>
-    <!-- Elite plus customer support -->
-    <string name="elite_plus_customer_support">ฝ่ายบริการลูกค้า Elite Plus</string>
+    <!-- Label for exclusive +silver phone number, "Expedia +silver Customer Support" -->
+    <string name="Expedia_plus_Silver_Customer_Support">ฝ่ายสนับสนุนลูกค้าเอ็กซ์พีเดีย +silver</string>
+    <!-- Label for exclusive +gold phone number, "Expedia +gold Customer Support" -->
+    <string name="Expedia_plus_Gold_Customer_Support">ฝ่ายสนับสนุนลูกค้าเอ็กซ์พีเดีย +gold</string>
     <!-- No upcoming trips -->
     <string name="no_upcoming_trips">ไม่มีการเดินทางเร็วๆ นี้</string>
     <!-- Enter itinerary number -->
@@ -1150,6 +1158,12 @@
     <string name="airline_card_not_supported_TEMPLATE">สายการบินไม่รับ %1$s</string>
     <!-- Message shown to user when they can't use their credit card to book with the airline, but when we don't know the type of the card -->
     <string name="airline_card_not_supported_generic">สายการบินไม่รับบัตรเครดิตประเภทนี้</string>
+    <!-- Message shown to user explaining a hotel fee is being charged to use their credit card brand, %1$s is the fee amount and %2$s is the credit card brand e.g. "The hotel charges a fee of $8.50 to use VISA." -->
+    <string name="hotel_card_fee_select_TEMPLATE">โรงแรมคิดค่าธรรมเนียม %1$s ในการใช้ %2$s</string>
+    <!-- Message shown to user when they can't use their credit card to book with the airline, %1$s is the credit card brand. e.g. "The hotel does not support VISA." -->
+    <string name="hotel_card_not_supported_TEMPLATE">โรงแรมไม่รับ %1$s</string>
+    <!-- Message shown to user when they can't use their credit card to book with the hotel, but when we don't know the type of the card -->
+    <string name="hotel_card_not_supported_generic">โรงแรมไม่รับบัตรเครดิตประเภทนี้</string>
 
     <!-- Checkout Activity -->
     <!-- Checkout Information label -->
@@ -2065,8 +2079,12 @@
     <string name="logout_confirmation">คุณต้องการออกจากบัญชีเอ็กซ์พีเดียหรือไม่</string>
     <!-- Label for account status -->
     <string name="enrolled_in_expedia_rewards">สมัครร่วม Expedia+ Rewards\u2122</string>
-    <!-- Label for account status -->
-    <string name="enrolled_in_expedia_elite_plus_rewards">สมาชิก Elite Plus</string>
+    <!-- Label for Expedia +blue rewards program name -->
+    <string name="Expedia_plus_blue">เอ็กซ์พีเดีย +blue</string>
+    <!-- Label for Expedia +silver rewards program name -->
+    <string name="Expedia_plus_silver">เอ็กซ์พีเดีย +silver</string>
+    <!-- Label for Expedia +gold rewards program name -->
+    <string name="Expedia_plus_gold">เอ็กซ์พีเดีย +gold</string>
     <!-- Label for account name -->
     <string name="logged_in_as">เข้าสู่ระบบในฐานะ</string>
     <!-- Label for signin screen -->
@@ -2122,11 +2140,17 @@
     <!-- Error when applying coupon - the hotel does not accept coupons -->
     <string name="coupon_error_hotel_excluded">ขออภัย โรงแรมนี้ไม่รับคูปอง</string>
     <!-- Error when applying coupon - the hotel does not accept coupons -->
-    <string name="coupon_error_invalid_hotel">ขออภัย โรงแรมนี้ไม่รับคูปอง</string>
+    <string name="coupon_error_invalid_hotel">ขออภัย ไม่สามารถใช้คูปองกับโรงแรมนี้ได้</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">ขออภัย เราไม่สามารถดำเนินการใช้คูปองได้ในขณะนี้ โปรดลองใหม่อีกครั้ง</string>
     <!-- Error when applying coupon - session timeout -->
     <string name="coupon_error_service_timeout">ขออภัย คุณใช้เวลาในการใช้รหัสนานเกินไป โปรดลองใหม่อีกครั้ง</string>
+    <!-- Error when applying coupon - Invalid Stay Dates -->
+    <string name="coupon_error_invalid_stay_dates">ขออภัย ไม่สามารถใช้คูปองสำหรับวันที่เดินทางเหล่านี้ได้</string>
+    <!-- Error when applying coupon - Exceeded Earn Limit -->
+    <string name="coupon_error_exceeded_earn_limit">ขออภัย มีการใช้คูปองนี้หลายครั้งเกินไป และไม่สามารถใช้ได้อีกต่อไป</string>
+    <!-- Error when applying coupon - Invalid Average Price -->
+    <string name="coupon_error_invalid_average_price">ขออภัย ราคาเฉลี่ยต่อคืนไม่ตรงตามขั้นต่ำสำหรับคูปองนี้</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2717,6 +2741,10 @@
     <string name="S_Push_flight_CITY_gate_GATE">ขณะนี้เที่ยวบินไป %1$s ของคุณกำลังออกจากประตู %2$s</string>
     <!-- Your bags will be at baggage claim _  TEMPLATE -->
     <string name="S_Push_baggage_BAGGAGE">กระเป๋าของคุณจะอยู่บริเวณจุดรับกระเป๋า %1$s</string>
+    <!-- <First Name>, your booking is confirmed! View it in the app. TEMPLATE -->
+    <string name="S_Push_Hey_VALUE_your_booking_is_confirmed">%1$s การจองของคุณได้รับการยืนยันแล้ว! ดูการจองในแอพ</string>
+    <!--Your booking is confirmed! View it in the app. (For when we can't or don't want to address by first name -->
+    <string name="S_Push_Your_booking_is_confirmed_View_it_in_app">การจองของคุณได้รับการยืนยันแล้ว ดูการจองในแอพ</string>
 
     <!-- VSC Info Screen -->
     <!-- Header for a list of apps also written by VSC -->
@@ -2986,5 +3014,8 @@
     <string name="tablet_mismatched_products_message">วันเข้าพักและวันเดินทางของเที่ยวบินที่คุณเลือกไม่ตรงกัน คุณต้องการนำโรงแรมที่เลือกไว้ขณะนี้ออก แล้วค้นหาโรงแรมด้วยวันที่ตรงกับเที่ยวบินของคุณหรือไม่</string>
     <!-- Dialog positive button message -->
     <string name="yes">ใช่</string>
+
+    <!-- Travelocity App download link -->
+    <string name="share_template_long_ad_tvly">จองโรงแรม เที่ยวบิน ดูและแชร์แผนการเดินทางของคุณ ดาวน์โหลดแอพฟรีจาก Travelocity วันนี้\n%s</string>
 
 </resources>
