--- a/project/src/main/res/values-vi/strings.xml
+++ b/project/src/main/res/values-vi/strings.xml
@@ -339,6 +339,8 @@
     <string name="x_flight_to_x_TEMPLATE">%1$s chuyến bay đến %2$s</string>
     <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
     <string name="your_flight_to_x_TEMPLATE">Chuyến bay của quý vị đến %1$s</string>
+    <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
+    <string name="your_selected_flight_to_x_TEMPLATE">Chuyến bay đến %1$s đã chọn</string>
     <!-- Notification title for car pick up -->
     <string name="Car_Pick_Up_X_TEMPLATE">Nhận xe – %s</string>
     <!-- Notification text for car pick up -->
@@ -351,6 +353,8 @@
     <string name="Activity_starting_soon">Hoạt động sắp đến</string>
     <!-- Notification text for activity start -->
     <string name="Your_X_ticket_can_be_redeemed_TEMPLATE">Quý vị đã có thể đổi vé %s để sử dụng từ ngày mai.</string>
+    <!-- Notification text for a desktop booking itinerary being available on the user's device -->
+    <string name="Itinerary_ready">Lịch trình đã sẵn sàng</string>
 
     <!-- Itineraries -->
     <!-- Itinerary -->
@@ -359,12 +363,16 @@
     <string name="shop">Đặt</string>
     <!-- Find Itinerary -->
     <string name="find_itinerary">Tìm lịch trình</string>
+    <!-- Enter Itinerary Details -->
+    <string name="enter_itinerary_details">Nhập chi tiết lịch trình</string>
     <!-- Find Itinerary # -->
     <string name="find_itinerary_pound">Tìm số lịch trình</string>
     <!-- Expedia Itinerary -->
     <string name="expedia_itinerary">Số lịch trình Expedia</string>
-    <!-- Elite plus customer support -->
-    <string name="elite_plus_customer_support">Hỗ trợ khách hàng Elite Plus</string>
+    <!-- Label for exclusive +silver phone number, "Expedia +silver Customer Support" -->
+    <string name="Expedia_plus_Silver_Customer_Support">Hỗ trợ khách hàng Expedia +silver</string>
+    <!-- Label for exclusive +gold phone number, "Expedia +gold Customer Support" -->
+    <string name="Expedia_plus_Gold_Customer_Support">Hỗ trợ khách hàng Expedia +gold</string>
     <!-- No upcoming trips -->
     <string name="no_upcoming_trips">Không có chuyến đi nào sắp đến.</string>
     <!-- Enter itinerary number -->
@@ -1148,6 +1156,12 @@
     <string name="airline_card_not_supported_TEMPLATE">Hãng hàng không này không hỗ trợ %1$s.</string>
     <!-- Message shown to user when they can't use their credit card to book with the airline, but when we don't know the type of the card -->
     <string name="airline_card_not_supported_generic">Hãng hàng không không hỗ trợ thanh toán bằng thẻ tín dụng thương hiệu này.</string>
+    <!-- Message shown to user explaining a hotel fee is being charged to use their credit card brand, %1$s is the fee amount and %2$s is the credit card brand e.g. "The hotel charges a fee of $8.50 to use VISA." -->
+    <string name="hotel_card_fee_select_TEMPLATE">Khách sạn thu phí %1$s nếu sử dụng %2$s.</string>
+    <!-- Message shown to user when they can't use their credit card to book with the airline, %1$s is the credit card brand. e.g. "The hotel does not support VISA." -->
+    <string name="hotel_card_not_supported_TEMPLATE">Khách sạn không hỗ trợ %1$s.</string>
+    <!-- Message shown to user when they can't use their credit card to book with the hotel, but when we don't know the type of the card -->
+    <string name="hotel_card_not_supported_generic">Khách sạn không hỗ trợ thương hiệu thẻ tín dụng này.</string>
 
     <!-- Checkout Activity -->
     <!-- Checkout Information label -->
@@ -2063,8 +2077,12 @@
     <string name="logout_confirmation">Quý vị có chắc chắn muốn thoát khỏi tài khoản Expedia không?</string>
     <!-- Label for account status -->
     <string name="enrolled_in_expedia_rewards">Đăng ký tham gia Expedia+ Rewards\u2122</string>
-    <!-- Label for account status -->
-    <string name="enrolled_in_expedia_elite_plus_rewards">Thành viên Elite Plus</string>
+    <!-- Label for Expedia +blue rewards program name -->
+    <string name="Expedia_plus_blue">Expedia +blue</string>
+    <!-- Label for Expedia +silver rewards program name -->
+    <string name="Expedia_plus_silver">Expedia +silver</string>
+    <!-- Label for Expedia +gold rewards program name -->
+    <string name="Expedia_plus_gold">Expedia +gold</string>
     <!-- Label for account name -->
     <string name="logged_in_as">Đăng nhập bằng</string>
     <!-- Label for signin screen -->
@@ -2120,11 +2138,17 @@
     <!-- Error when applying coupon - the hotel does not accept coupons -->
     <string name="coupon_error_hotel_excluded">Rất tiếc, khách sạn này không chấp nhận coupon.</string>
     <!-- Error when applying coupon - the hotel does not accept coupons -->
-    <string name="coupon_error_invalid_hotel">Rất tiếc, khách sạn này không chấp nhận coupon.</string>
+    <string name="coupon_error_invalid_hotel">Rất tiếc, không thể áp dụng coupon cho khách sạn này.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Rất tiếc, hiện chúng tôi không thể xử lý coupon.  Vui lòng thử lại.</string>
     <!-- Error when applying coupon - session timeout -->
     <string name="coupon_error_service_timeout">Rất tiếc, đã mất khá nhiều thời gian để áp dụng mã này. Vui lòng thử lại.</string>
+    <!-- Error when applying coupon - Invalid Stay Dates -->
+    <string name="coupon_error_invalid_stay_dates">Rất tiếc, không thể áp dụng coupon cho những ngày đi này.</string>
+    <!-- Error when applying coupon - Exceeded Earn Limit -->
+    <string name="coupon_error_exceeded_earn_limit">Rất tiếc, coupon này đã được sử dụng quá nhiều lần và hiện không thể áp dụng được nữa.</string>
+    <!-- Error when applying coupon - Invalid Average Price -->
+    <string name="coupon_error_invalid_average_price">Rất tiếc, giá trung bình mỗi đêm không đáp ứng yêu cầu tối thiểu để sử dụng coupon này.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2715,6 +2739,10 @@
     <string name="S_Push_flight_CITY_gate_GATE">Chuyến bay đến %1$s của quý vị đang khởi hành từ cổng %2$s.</string>
     <!-- Your bags will be at baggage claim _  TEMPLATE -->
     <string name="S_Push_baggage_BAGGAGE">Hành lý của quý vị sẽ được chuyển đến băng chuyền hành lý %1$s.</string>
+    <!-- <First Name>, your booking is confirmed! View it in the app. TEMPLATE -->
+    <string name="S_Push_Hey_VALUE_your_booking_is_confirmed">%1$s, đặt phòng/đặt chỗ của quý vị đã được xác nhận! Xem trong app.</string>
+    <!--Your booking is confirmed! View it in the app. (For when we can't or don't want to address by first name -->
+    <string name="S_Push_Your_booking_is_confirmed_View_it_in_app">Đặt phòng/đặt chỗ của quý vị đã được xác nhận! Xem trong app.</string>
 
     <!-- VSC Info Screen -->
     <!-- Header for a list of apps also written by VSC -->
@@ -2984,5 +3012,8 @@
     <string name="tablet_mismatched_products_message">Ngày nhận phòng khách sạn và ngày chuyến bay quý vị chọn khác nhau. Quý vị có muốn xóa lựa chọn khách sạn hiện tại và tìm khách sạn với cùng ngày của chuyến bay không?</string>
     <!-- Dialog positive button message -->
     <string name="yes">Có</string>
+
+    <!-- Travelocity App download link -->
+    <string name="share_template_long_ad_tvly">Đặt phòng khách sạn, chuyến bay; xem &amp; chia sẻ lịch trình của quý vị. Tải app Travelocity miễn phí ngay hôm nay.\n%s</string>
 
 </resources>
